--- a/frontend/src/resources/scss/_variables.scss
+++ b/frontend/src/resources/scss/_variables.scss
@@ -1,5 +1,7 @@
 $blue: #003976;
 $orange: #f89828;
 $white: #fff;
-$grey: #d8dcee;
-$lightgrey: #585860;
+$lightgrey: #d8dcee;
+$grey: #585860;
+$red: #f08080;
+$green: #90ee90;
